# x402-chain-miden

./: .gitignore  COMPREHENSIVE-REVIEW.md  Cargo.toml  PRIVACY-ARCHITECTURE.md  README.md
.github/workflows/: ci.yml
docs/: architecture.md
examples/client-example/: Cargo.toml
examples/client-example/src/: main.rs
examples/server-example/: Cargo.toml
examples/server-example/src/: main.rs
facilitator/: Cargo.toml  Dockerfile  config.example.json
facilitator/src/: main.rs
src/: lib.rs  networks.rs
src/chain/: config.rs  mod.rs  provider.rs  types.rs
src/lightweight/: chain_state.rs  client.rs  mod.rs  server.rs  types.rs  verification.rs
src/privacy/: mod.rs  public.rs  trusted.rs
src/v2_miden_exact/: client.rs  facilitator.rs  mod.rs  server.rs  types.rs
tests/: e2e_testnet.rs  integration_test.rs  miden_native_test.rs
