[package]
name = "x402-chain-miden"
version = "0.1.0"
authors = ["Himess"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Himess/x402-chain-miden"
rust-version = "1.88.0"
keywords = ["blockchain", "payments", "x402", "miden", "http-402"]
categories = ["cryptography::cryptocurrencies", "finance", "network-programming"]
description = "Miden blockchain support for the x402 payment protocol"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
client = ["async-trait", "rand", "alloy-primitives"]
server = []
facilitator = ["async-trait", "tokio", "url"]
full = ["client", "server", "facilitator"]

[dependencies]
x402-types = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = { version = "2.0" }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.35", features = ["sync"], optional = true }
url = { version = "2.5", features = ["serde"], optional = true }
rand = { version = "0.9", optional = true }
hex = { version = "0.4" }
alloy-primitives = { version = "1.4", optional = true }
