[workspace]
members = [".", "facilitator", "examples/server-example", "examples/client-example"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Himess"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Himess/x402-chain-miden"
rust-version = "1.90.0"

[package]
name = "x402-chain-miden"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["blockchain", "payments", "x402", "miden", "http-402"]
categories = ["cryptography::cryptocurrencies", "finance", "network-programming"]
description = "Miden blockchain support for the x402 payment protocol"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
client = ["async-trait", "alloy-primitives"]
server = []
facilitator = ["async-trait", "tokio"]
full = ["client", "server", "facilitator"]
miden-native = ["dep:miden-protocol", "dep:miden-tx", "dep:miden-standards", "tracing"]
miden-client-native = ["miden-native", "dep:miden-client", "tokio"]

[dependencies]
x402-types = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = { version = "2.0" }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.35", features = ["sync"], optional = true }
hex = { version = "0.4" }
alloy-primitives = { version = "1.4", optional = true }
miden-protocol = { version = "0.13", optional = true, default-features = false, features = ["std", "testing"] }
miden-tx = { version = "0.13", optional = true, default-features = false, features = ["std", "testing"] }
miden-standards = { version = "0.13", optional = true, default-features = false, features = ["std", "testing"] }
miden-client = { version = "0.13", optional = true, default-features = false, features = ["std", "tonic"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
