[package]
name = "x402-miden-client-example"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "client-example"
path = "src/main.rs"

[dependencies]
x402-chain-miden = { path = "../..", features = ["client"] }
x402-types = { version = "1.0" }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
